re PR tree-optimization/52891 (ICE in adjust_bool_pattern)

PR tree-optimizations/52891
	* tree-vect-patterns.c (adjust_bool_pattern): Use
	build_nonstandard_type even if rhs1 has unsigned INTEGER_TYPE,
	but with non-standard precision.

	* gcc.c-torture/compile/pr52891-1.c: New test.	
	* gcc.c-torture/compile/pr52891-2.c: New test.

From-SVN: r186695